add atm server